[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Ship.png" type="Texture" id=1]
[ext_resource path="res://Assets/Laser.png" type="Texture" id=2]
[ext_resource path="res://Assets/ButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Button.png" type="Texture" id=4]
[ext_resource path="res://Assets/ButtonSelected.png" type="Texture" id=5]
[ext_resource path="res://Font/slkscrb.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/bomb.png" type="Texture" id=7]
[ext_resource path="res://Upgrades.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 6 )

[node name="Upgrades" type="Node2D"]
script = ExtResource( 8 )

[node name="Experience" type="VBoxContainer" parent="."]
margin_left = 9.0
margin_top = 9.52269
margin_right = 230.0
margin_bottom = 31.5227
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="Experience"]
margin_right = 369.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "There was an Error"

[node name="ItemInfo" type="VBoxContainer" parent="."]
margin_left = 64.1049
margin_top = 67.7235
margin_right = 400.105
margin_bottom = 319.724
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="ItemInfo"]
margin_right = 336.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Hull
"
align = 1

[node name="Desc" type="Label" parent="ItemInfo"]
margin_top = 58.0
margin_right = 336.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "Allows you to take more hits
"
align = 1

[node name="sprite" type="Sprite" parent="ItemInfo"]
position = Vector2( 166.135, 104.385 )
scale = Vector2( 2.21843, 2.21843 )
texture = ExtResource( 1 )

[node name="ItemInfo2" type="VBoxContainer" parent="."]
margin_left = 72.0419
margin_top = 291.561
margin_right = 408.042
margin_bottom = 543.561
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="ItemInfo2"]
margin_right = 336.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Gas Port
"
align = 1

[node name="Desc" type="Label" parent="ItemInfo2"]
margin_top = 58.0
margin_right = 336.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "Increases your rate of fire
"
align = 1

[node name="sprite" type="Sprite" parent="ItemInfo2"]
position = Vector2( 163.927, 94.3135 )
rotation = 1.5708
scale = Vector2( 5.77022, 5.77022 )
texture = ExtResource( 2 )

[node name="ItemInfo3" type="VBoxContainer" parent="."]
margin_left = 72.0419
margin_top = 495.476
margin_right = 408.042
margin_bottom = 747.476
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="ItemInfo3"]
margin_right = 336.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Bomb Bay
"
align = 1

[node name="Desc" type="Label" parent="ItemInfo3"]
margin_top = 58.0
margin_right = 336.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "Lets you carry more bombs
"
align = 1

[node name="bomb" type="Sprite" parent="ItemInfo3"]
position = Vector2( 162.592, 109.935 )
rotation = 1.5708
scale = Vector2( 2.34559, 2.34559 )
texture = ExtResource( 7 )

[node name="UpgradeButton" type="TextureButton" parent="."]
margin_left = 130.266
margin_top = 221.011
margin_right = 338.266
margin_bottom = 261.011
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Upgrade" type="Label" parent="UpgradeButton"]
margin_right = 206.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.0980392, 0.156863, 1 )
text = "Upgrade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton2" type="TextureButton" parent="."]
margin_left = 133.44
margin_top = 439.401
margin_right = 341.44
margin_bottom = 479.401
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Upgrade" type="Label" parent="UpgradeButton2"]
margin_right = 206.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.0980392, 0.156863, 1 )
text = "Upgrade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton3" type="TextureButton" parent="."]
margin_left = 131.853
margin_top = 662.987
margin_right = 339.853
margin_bottom = 702.987
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Upgrade" type="Label" parent="UpgradeButton3"]
margin_right = 206.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.0980392, 0.156863, 1 )
text = "Upgrade"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 9.62311
margin_top = 748.029
margin_right = 217.623
margin_bottom = 788.029
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ReturnToHangar" type="Label" parent="BackButton"]
margin_right = 206.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.0980392, 0.156863, 1 )
text = "Hangar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="UpgradeButton" to="." method="_on_UpgradeButton_button_up"]
[connection signal="button_up" from="UpgradeButton2" to="." method="_on_UpgradeButton2_button_up"]
[connection signal="button_up" from="UpgradeButton3" to="." method="_on_UpgradeButton3_button_up"]
[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
